# programming_stuff

./: README.md  extended_gcd.py  modular-arithmetic.py
crypto/: crc32.c
linux/speed-demo/: Makefile  README.org  speed.c
llvm/: our_pass.cpp  readme.org
llvm/llvm-passes/: CMakeLists.txt  README.org
llvm/llvm-passes/examples/: LocalOptEx.c  LocalOptEx.ll  LocalOptExe  LocalOptExe.ll  LocalOptExe.s  log_func.c
llvm/llvm-passes/include/: MyPass.h
llvm/llvm-passes/lib/: AddWrapperPass.cpp  CMakeLists.txt  DCEPass.cpp  DCEPass.h  LocalOptPass.cpp  PassManager.cpp  old_pass.cpp
llvm/llvm-passes/tool/: CMakeLists.txt  Main.cpp
qemu/: light-qemu.c
rust/00_basic_demo/: Cargo.toml
rust/00_basic_demo/src/: main.rs
xnu/IOKit/: #demo2.c#  .#demo2.c  demo1.c  demo2.c
z3/: ex1  ex2  ex3  ex4  sudoku
